DynamoDBのテーブル定義追加

--- a/serverless.yml
+++ b/serverless.yml
@@ -20,3 +20,19 @@ provider:
 functions:
   hello:
     handler: handler.hello
+
+resources:
+  Resources:
+    shorturl:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: shorturl
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
