APIのエンドポイント定義

--- a/serverless.yml
+++ b/serverless.yml
@@ -19,7 +19,12 @@ provider:
 
 functions:
   hello:
-    handler: handler.hello
+    handler: handler.long2short
+    timeout: 30
+    events:
+      - http:
+          path: /
+          method: get
 
 resources:
   Resources:
