シーケンス用テーブル定義追加

--- a/serverless.yml
+++ b/serverless.yml
@@ -41,3 +41,16 @@ resources:
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
+    shorturlSequence:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: shorturl_sequence
+        AttributeDefinitions:
+          - AttributeName: name
+            AttributeType: S
+        KeySchema:
+          - AttributeName: name
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
