--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "2.157.0",
-    "serverless": "1.24.1"
+    "serverless": "1.24.1",
+    "url": "0.11.0"
   }
 }
